# Python_basic_course

./: .gitignore  README.md  pyproject.toml
Lesson1/: main.py
Lesson1/homework1/: task1.py  task2.py  task3.py  task4.py
Lesson2/: main.py
Lesson2/hw_tasks/: shuffling_list.py  sum_of_digits.py  sum_seq.py
Lesson3/: convert_to_binary.py  fibonacci.py  fruction_difference.py  main.py  mult_pair.py  sum_elements.py
Lesson3/tasks_hw/: __init__.py  base_task.py  convert_to_binary.py  fibonacci.py  fruction_difference.py  helpers.py  mult_pair.py  sum_elements.py
